FreeImage/Wrapper/Delphi/FreeImage.pas


// iterator
function FreeImage_FindFirstMetadata(model: FREE_IMAGE_MDMODEL; dib: PFIBITMAP;
  var tag: PFITAG): PFIMETADATA; stdcall;
  external FIDLL name '_FreeImage_FindFirstMetadata@12';

function FreeImage_FindNextMetadata(mdhandle: PFIMETADATA;
  var tag: PFITAG): Boolean; stdcall;
  external FIDLL name '_FreeImage_FindNextMetadata@8';

procedure FreeImage_FindCloseMetadata(mdhandle: PFIMETADATA); stdcall;
  external FIDLL name '_FreeImage_FindCloseMetadata@4';


// setter and getter

function FreeImage_SetMetadata(model: FREE_IMAGE_MDMODEL; dib: PFIBITMAP;
  const key: PChar; tag: PFITAG): Boolean; stdcall;
  external FIDLL name '_FreeImage_SetMetadata@16';

function FreeImage_GetMetaData(model: FREE_IMAGE_MDMODEL; dib: PFIBITMAP;
  const key: PChar; var tag: PFITAG): Boolean; stdcall;
  external FIDLL name '_FreeImage_GetMetadata@16';

// helpers
function FreeImage_GetMetadataCount(model: FREE_IMAGE_MDMODEL;
  dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetMetadataCount@8';

// tag to C string conversion
function FreeImage_TagToString(model: FREE_IMAGE_MDMODEL; tag: PFITAG;
  Make: PChar = nil): PChar; stdcall;
  external FIDLL name '_FreeImage_TagToString@12';


// --------------------------------------------------------------------------
// Image manipulation toolkit -----------------------------------------------
// --------------------------------------------------------------------------

// rotation and flipping
function FreeImage_RotateClassic(dib : PFIBITMAP; angle : Double) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_RotateClassic@12';
function FreeImage_RotateEx(dib : PFIBITMAP; angle, x_shift, y_shift, x_origin, y_origin : Double;
                                use_mask : Boolean) : PFIBITMAP; stdcall; external FIDLL name '_FreeImage_RotateEx@48';
function FreeImage_FlipHorizontal(dib : PFIBITMAP) : Boolean; stdcall; external FIDLL name '_FreeImage_FlipHorizontal@4';
function FreeImage_FlipVertical(dib : PFIBITMAP) : Boolean; stdcall; external FIDLL name '_FreeImage_FlipVertical@4';

// upsampling / downsampling
function FreeImage_Rescale(dib : PFIBITMAP; dst_width, dst_height : Integer; filter : FREE_IMAGE_FILTER) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_Rescale@16';
// color manipulation routines (point operations)
function FreeImage_AdjustCurve(dib : PFIBITMAP; LUT : PBYTE; channel : FREE_IMAGE_COLOR_CHANNEL) : Boolean;
                                stdcall; external FIDLL name '_FreeImage_AdjustCurve@12';
function FreeImage_AdjustGamma(dib : PFIBITMAP; gamma : Double) : Boolean;
                                stdcall; external FIDLL name '_FreeImage_AdjustGamma@12';
function FreeImage_AdjustBrightness(dib : PFIBITMAP; percentage : Double) : Boolean;
                                stdcall; external FIDLL name '_FreeImage_AdjustBrightness@12';
function FreeImage_AdjustContrast(dib : PFIBITMAP; percentage : Double) : Boolean;
                                stdcall; external FIDLL name '_FreeImage_AdjustContrast@12';
function FreeImage_Invert(dib : PFIBITMAP) : Boolean; stdcall; external FIDLL name '_FreeImage_Invert@4';
function FreeImage_GetHistogram(dib : PFIBITMAP; histo : PDWORD; channel : FREE_IMAGE_COLOR_CHANNEL = FICC_BLACK) : Boolean;
                                stdcall; external FIDLL name '_FreeImage_GetHistogram@12';
// channel processing routines
function FreeImage_GetChannel(dib: PFIBITMAP;
  channel: FREE_IMAGE_COLOR_CHANNEL): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_GetChannel@8';
  
function FreeImage_SetChannel(dib, dib8: PFIBITMAP;
  channel: FREE_IMAGE_COLOR_CHANNEL): Boolean; stdcall;
  external FIDLL name '_FreeImage_SetChannel@12';

function FreeImage_GetComplexChannel(src: PFIBITMAP;
  channel: FREE_IMAGE_COLOR_CHANNEL): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_GetComplexChannel@8';

function FreeImage_SetComplexChannel(src: PFIBITMAP;
  channel: FREE_IMAGE_COLOR_CHANNEL): Boolean; stdcall;
  external FIDLL name '_FreeImage_SetComplexChannel@12';

// copy / paste / composite routines

function FreeImage_Copy(dib: PFIBITMAP;
  left, top, right, bottom: Integer): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_Copy@20';
  
function FreeImage_Paste(dst, src: PFIBITMAP;
  left, top, alpha: Integer): Boolean; stdcall;
  external FIDLL name '_FreeImage_Paste@20';

function FreeImage_Composite(fg: PFIBITMAP; useFileBkg: Boolean = False;
  appBkColor: PRGBQUAD = nil; bg: PFIBITMAP = nil): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_Composite@16';
  
{$MINENUMSIZE 1}
implementation

end.
